# Manual_GUI

camera_gui/: CMakeLists.txt  package.xml
camera_gui/launch/: cam_launch.launch  qt_lauch.launch
camera_gui/src/: main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mylabel.h
gscam/: .CMakeLists.txt.swp  CMakeLists.txt
gscam/examples/: gscam_channel1.launch  gscam_channel2.launch  gscam_channel3.launch  gscam_channel4.launch  gscam_nodelet.launch  gscam_nodelet3.launch  gscam_nodelet5.launch  v4l.launch
gscam/src/: gscam.cpp
joy/: CMakeLists.txt
learning_joy/: CMakeLists.txt  package.xml
learning_joy/launch/: turtle_joy.launch
learning_joy/src/: joy_listener_node.cpp  turtle_teleop_joy.cpp
usb_cam/: CMakeLists.txt
usb_cam/nodes/: image_sub_node.cpp
